--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://valerysm.github.io/Demo-GWC",
+  "homepage": "https://valerysm.github.io/Demo-GWC/",
   "main": "index.js",
   "keywords": [],
   "author": "",
